RESOLVED FIXED238186
-[WKWebView _spellCheckerDocumentTag] is inconsistent with the document tag passed into NSSpellChecker
https://bugs.webkit.org/show_bug.cgi?id=238186
Summary -[WKWebView _spellCheckerDocumentTag] is inconsistent with the document tag p...
Wenson Hsieh
Reported 2022-03-21 21:52:10 PDT
Attachments
Patch (13.03 KB, patch)
2022-03-21 22:02 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-03-21 22:02:52 PDT
Wenson Hsieh
Comment 2 2022-03-22 07:39:02 PDT
Comment on attachment 455331 [details] Patch Thanks for the review!
EWS
Comment 3 2022-03-22 08:25:22 PDT
Committed r291618 (248711@main): <https://commits.webkit.org/248711@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455331 [details].
Note You need to log in before you can comment on or make changes to this bug.